package com.example.task_prp.ui.screen.loginscreen

object LoginTestTags {

    const val PHONE_TEST_TAG = "PhoneField"

    const val FLAG_ICON_TEST_TAG = "FlagIcon"
    const val PASSWORD_TEST_TAG = "PasswordField"
    const val SHOW_PASSWORD_BUTTON_TEST_TAG = "ShowPasswordButton"
    const val LOGIN_BUTTON_TEST_TAG = "LoginButton"
    const val CREATE_ACCOUNT_BUTTON_TEST_TAG = "CreateAccountButton"

}