package com.example.task_prp.ui.screen.signupscreen

object SignUpTestTag {
    const val NAME_TEST_TAG = "nameField"

    const val SUR_NAME_TEST_TAG = "surNameField"

    const val EMAIL_TEST_TAG = "emailField"

    const val PHONE_TEST_TAG = "phoneField"

    const val PICK_COUNTRY_TEST_TAG = "pickCountry"

    const val CONFIRM_BUTTON_TEST_TAG = "confirm"

    const val BACK_BUTTON_TEST_TAG = "back"
}